--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel&Explore</title>
+    <title>Explore Travel</title>
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900;1000&display=swap"
+        rel="stylesheet">
+    <!--custom CSS-->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <h1>Travel & Explore</h1>
+    <header>
+        <nav>
+            <div class="header_brand_name">
+                <img src="./Images/Group 40071 (2).png" alt="Brand logo">
+                <h1><span>Explore</span> Travel</h1>
+            </div>
+            <div class="nav_menu">
+                <ul>
+                    <li><a href=""><span>Home</span></a></li>
+                    <li><a href="">Packages</a></li>
+                    <li><a href="">Testimonial</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     
+
 </body>
+
 </html>
