--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900;1000&display=swap"
         rel="stylesheet">
+    <!--font awesomne-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--custom CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -30,9 +34,11 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
+            <div class="menu_bars"><i class="fa-solid fa-bars"></i></div>
+
         </nav>
     </header>
-    
+
 
 </body>
 
