search section completed with responsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Travel</title>
+    <title>Expo Travel</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,11 +19,12 @@
 </head>
 
 <body>
+    <!--header start-->
     <header>
         <nav>
             <div class="header_brand_name">
                 <img src="./Images/Group 40071 (2).png" alt="Brand logo">
-                <h1><span>Explore</span> Travel</h1>
+                <h1><span>Expo</span> Travel</h1>
             </div>
             <div class="nav_menu">
                 <ul>
@@ -38,6 +39,35 @@
 
         </nav>
     </header>
+    <!--header end-->
+
+    <!--main start-->
+    <main>
+        <section class="hero_item">            
+            <div class="explore_content">
+                <h1>Explore Your Travel</h1>
+                <p>Travel exposes individuals to different cultures, traditions, and ways of life. This cultural
+                    diversity fosters appreciation for the richness of human experiences.
+                </p>
+                <div class="explore_filter">
+                    <input type="text" name="" id="" placeholder="Where go">
+                    <select name="" id="">
+                        <option value="">When</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Select Type</option>
+                    </select>
+                    <button type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        Find now
+                    </button>
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <!--main end-->
+
 
 
 </body>
