popular section completed with responsive design

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <!--main start-->
     <main>
-        <section class="hero_item">            
+        <!--hero section start-->
+        <section class="hero_item">
             <div class="explore_content">
                 <h1>Explore Your Travel</h1>
                 <p>Travel exposes individuals to different cultures, traditions, and ways of life. This cultural
@@ -65,6 +66,34 @@
                 </div>
             </div>
         </section>
+        <!--hero section start-->
+
+        <!--popular tour section start-->
+        <section id="popular_tour_section">
+            <div class="popular_content">
+                <div class="popular_tour">
+                    <h1>Our Popular Tours</h1>
+                    <p>Soar over the breathtaking Grand Canyon for an aerial perspective of its vast landscapes and majestic rock formations.</p>
+                    <ul>
+                        <li>Embark on a backpacking journey through Europe, exploring iconic cities like Paris, Rome, and Barcelona. </li>
+                        <li>Experience the thrill of a safari in the Serengeti National Park, Tanzania. Discover the beauty of Japan during cherry blossom season. </li>
+                        <li>Hike the ancient Inca Trail to reach the awe-inspiring Machu Picchu in Peru. This tour combines adventure with history as you explore the mystical ruins surrounded by stunning mountain scenery. </li>
+                    </ul>
+                    <p>Explore the unique and diverse ecosystems of the Galápagos Islands on a cruise. Encounter fascinating wildlife, including giant tortoises, marine iguanas, and colorful bird species.</p>
+                    <button>Read More</button>
+                </div>
+                <div class="popular_image">
+                    <img src="./Images/Rectangle 4.png" alt="Mountain">
+                </div>
+            </div>
+        </section>
+
+        <!--popular tour section start-->
+
+
+
+
+
     </main>
     <!--main end-->
 
