choose destination completed with responsive

--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@
             <div class="popular_content">
                 <div class="popular_tour">
                     <h1>Our Popular Tours</h1>
-                    <p>Soar over the breathtaking Grand Canyon for an aerial perspective of its vast landscapes and majestic rock formations.</p>
+                    <p>Soar over the breathtaking Grand Canyon for an aerial perspective of its vast landscapes and
+                        majestic rock formations.</p>
                     <ul>
-                        <li>Embark on a backpacking journey through Europe, exploring iconic cities like Paris, Rome, and Barcelona. </li>
-                        <li>Experience the thrill of a safari in the Serengeti National Park, Tanzania. Discover the beauty of Japan during cherry blossom season. </li>
-                        <li>Hike the ancient Inca Trail to reach the awe-inspiring Machu Picchu in Peru. This tour combines adventure with history as you explore the mystical ruins surrounded by stunning mountain scenery. </li>
+                        <li>Embark on a backpacking journey through Europe, exploring iconic cities like Paris, Rome,
+                            and Barcelona. </li>
+                        <li>Experience the thrill of a safari in the Serengeti National Park, Tanzania. Discover the
+                            beauty of Japan during cherry blossom season. </li>
+                        <li>Hike the ancient Inca Trail to reach the awe-inspiring Machu Picchu in Peru. This tour
+                            combines adventure with history as you explore the mystical ruins surrounded by stunning
+                            mountain scenery. </li>
                     </ul>
-                    <p>Explore the unique and diverse ecosystems of the Galápagos Islands on a cruise. Encounter fascinating wildlife, including giant tortoises, marine iguanas, and colorful bird species.</p>
+                    <p>Explore the unique and diverse ecosystems of the Galápagos Islands on a cruise. Encounter
+                        fascinating wildlife, including giant tortoises, marine iguanas, and colorful bird species.</p>
                     <button>Read More</button>
                 </div>
                 <div class="popular_image">
@@ -88,11 +94,54 @@
             </div>
         </section>
 
-        <!--popular tour section start-->
+        <!--popular tour section end-->
 
+        <!--Choose destination section start-->
+        <section id="destination">
+            <div class="heading">
+                <h1>Choose Your Destination</h1>
+                <p>Explore the stunning landscapes of New Zealand, known for its mountains, fjords, and outdoor
+                    adventure activities like hiking, bungee jumping, and water sports.</p>
+            </div>
+            <div class="destination_images">
+                <div class="row_1">
+                    <div class="first_image row">
+                        <h1>Maldives</h1>
+                        <img src="./Images/Rectangle 5.png" alt="Maldives">
+                    </div>
+                    <div class="last_image row">
+                        <h1>Indonesia</h1>
+                        <img src="./Images/Rectangle 8.png" alt="Indonesia">
+                    </div>
+                </div>
+                <div class="row_2">
+                    <div class="first_image row">
+                        <h1>Srilanka</h1>
+                        <img src="./Images/Rectangle 6.png" alt="Srilanka">
+                    </div>
+                    <div class="middle_image row">
+                        <h1>North America</h1>
+                        <img src="./Images/Rectangle 7.png" alt="North America">
+                    </div>
+                    <div class="last_image row">
+                        <h1>Kashmir</h1>
+                        <img src="./Images/Rectangle 9.png" alt="kashmir">
+                    </div>
+                </div>
+                <div class="row_3">
+                    <div class="first_image row">
+                        <h1>Bangladesh</h1>
+                        <img src="./Images/Rectangle 11.png" alt="Bangladesh">
+                    </div>
+                    <div class="last_image row">
+                        <h1>Bandarban</h1>
+                        <img src="./Images/Rectangle 10.png" alt="Bandarban">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-
-
+        <!--Choose destination section end-->
 
     </main>
     <!--main end-->
