choose us section completed with responsive

--- a/index.html
+++ b/index.html
@@ -140,8 +140,37 @@
                 </div>
             </div>
         </section>
-
         <!--Choose destination section end-->
+
+        <!--Choose us section start-->
+        <section id="choose_us">
+            <div class="heading_content">
+                <h1>Why Choose Us</h1>
+                <p>Trust often stems from the belief that someone is reliable and will fulfill their commitments. </p>
+            </div>
+            <div class="hotels_service">
+                <div class="hotels">
+                    <img src="./Images/icons8-hotel-64.png" alt="Hotel logo">
+                    <h2>Handpicked Hotels</h2>
+                    <p>An iconic hotel with a rich history, The Plaza is located at the corner of Fifth Avenue and
+                        Central Park South, offering timeless elegance and a prime location.</p>
+                </div>
+                <div class="service">
+                    <img src="./Images/icons8-map-marker-100.png" alt="Map logo">
+                    <h2>World Class Service</h2>
+                    <p>World-class service refers to an exceptional level of service that goes above and beyond customer
+                        expectations. It involves providing a seamless, and memorable experience that
+                        leaves.</p>
+                </div>
+            </div>
+            <div class="price_guarantee">
+                <img src="./Images/icons8-sale-price-tag-64.png" alt="Map logo">
+                <h2>World Class Service</h2>
+                <p>This guarantee promises that the business will match or beat the lowest price offered by competitors
+                    for the same product or service. </p>
+            </div>
+        </section>
+        <!--Choose us section end-->
 
     </main>
     <!--main end-->
