--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <!--custom CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -174,6 +178,31 @@
 
     </main>
     <!--main end-->
+
+    <!--footer start-->
+    <footer>
+        <div class="footer_content">
+            <div class="head">
+                <img src="./Images/Group 40071 (2).png" alt="logo">
+                <h1><span>Expo</span> Travel</h1>
+            </div>
+            <div class="para">
+                <p>World-class service providers demonstrate empathy and understanding towards customers. Investing in
+                    training and development for employees is essential. </p>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+            <hr>
+            <p>2017, All Rights Reserved.</p>
+        </div>
+    </footer>
+
+
+    <!--footer end-->
 
 
 
