--- a/index.html
+++ b/index.html
@@ -175,6 +175,78 @@
             </div>
         </section>
         <!--Choose us section end-->
+        <section id="deals_discounts">
+            <div class="heading_content">
+                <h1>Deals & Discounts</h1>
+                <p>20% off" means customers pay 80% of the regular price. $10 discount" means customers pay $10 less
+                    than the regular price.</p>
+            </div>
+            <div class="image_container">
+                <div class="first_bg_image">
+                    <div class="booking_1">
+                        <div class="icon_with_content">
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                <span>7 Day / 6 Night</span>
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-people-group"></i>
+                                <span>Max : 10</span>
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Malaysia</span>
+                            </div>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>Unwind in the luxurious overwater bungalows of the Malaysia.</p>
+                        <h3>Price: $1300-$1500</h3>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+                <div class="second_bg_image">
+                    <div class="booking_1">
+                        <div class="icon_with_content">
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                <span>7 Day / 6 Night</span>
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-people-group"></i>
+                                <span>Max : 10</span>
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Malaysia</span>
+                            </div>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>Unwind in the luxurious overwater bungalows of the Malaysia.</p>
+                        <h3>Price: $1300-$1500</h3>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+                <div class="third_bg_image">
+                    <div class="booking_1">
+                        <div class="icon_with_content">
+                            <div>
+                                <i class="fa-regular fa-clock"></i>
+                                <span>7 Day / 6 Night</span>
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-people-group"></i>
+                                <span>Max : 10</span>
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Malaysia</span>
+                            </div>
+                        </div>
+                        <h1>Tour To Satorini</h1>
+                        <p>Unwind in the luxurious overwater bungalows of the Malaysia.</p>
+                        <h3>Price: $1300-$1500</h3>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="packages_button">
+                <button>See All Packages</button>
+            </div>
+        </section>
 
     </main>
     <!--main end-->
