--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             </div>
         </section>
         <!--Choose us section end-->
+        <!--Deals and Discount section start-->
         <section id="deals_discounts">
             <div class="heading_content">
                 <h1>Deals & Discounts</h1>
@@ -247,6 +248,33 @@
                 <button>See All Packages</button>
             </div>
         </section>
+        <!--Deals and Discount section start-->
+
+        <!--Perfect place and Video section start-->
+        <sction id="perfect_place">
+            <div class="perfect_place_content">
+                <div class="description">
+                    <h1>A Simple Perfect Place To Get Lost</h1>
+                    <p>The perfect place for a visit depends on your personal preferences, budget, and the type of
+                        experiences you're seeking. </p>
+                    <ul>
+                        <li>Vibrant nightlife, futuristic technology, and a mix of traditional and modern attractions.
+                        </li>
+                        <li>Renowned for its exquisite cuisine, patisseries, and iconic landmarks.</li>
+                    </ul>
+                    <button>See More</button>
+                </div>
+                <div class="video_content">
+                    <h3>Watch Our Mountain in Bangladesh</h3>
+                    <video src="./videos/mountain.mp4" controls></video>
+                </div>
+            </div>
+        </sction>
+
+        <!--Perfect place and Video section end-->
+
+
+
 
     </main>
     <!--main end-->
