--- a/index.html
+++ b/index.html
@@ -264,14 +264,42 @@
                     </ul>
                     <button>See More</button>
                 </div>
-                <div class="video_content">
-                    <h3>Watch Our Mountain in Bangladesh</h3>
-                    <video src="./videos/mountain.mp4" controls></video>
+                <div class="extra_margin">
+                    <div class="video_content">
+                        <h3>Watch Our Mountain in Bangladesh</h3>
+                        <video src="./videos/mountain.mp4" controls></video>
+                    </div>
                 </div>
             </div>
         </sction>
 
         <!--Perfect place and Video section end-->
+
+
+        <!--Newsletter section Start-->
+        <section id="newsletter">
+            <div class="newsletter_content">
+                <div class="subcription">
+                    <h1>Newsletter</h1>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <hr>
+                    <input type="text" name="" id="" placeholder="Enter your name">
+                    <input type="email" name="" id="" placeholder="Enter your email">
+                    <button>Subscribe</button>
+                </div>
+                <div class="image">
+                    <img src="./Images/Rectangle 8 (1).png" alt="Mountain">
+                    <div class="top">
+                        <span>Travel.com</span>
+                        <p>Save up to 70%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Newsletter section end-->
+
+
 
 
 
