--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </ul>
                     <button>See More</button>
                 </div>
-                <div class="extra_margin">
+                <div>
                     <div class="video_content">
                         <h3>Watch Our Mountain in Bangladesh</h3>
                         <video src="./videos/mountain.mp4" controls></video>
